# taskX

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTER_REPORT_0001_0002.json  LICENSE  README.md  README_TASKX_INSTALL.md  SECURITY.md  TASK_PACKET_TP_0017_LOCAL_METRICS.md  pyproject.toml  taskx_bundle.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  claude-platform-ci.yml  codeql.yml  ghcr.yml  release.yml  security.yml  taskx_ci.yml  taskx_release.yml
docs/: 00_OVERVIEW.md  01_INSTALL.md  02_QUICKSTART.md  10_ARCHITECTURE.md  11_PUBLIC_CONTRACT.md  12_ROUTER.md  13_TASK_PACKET_FORMAT.md  14_PROJECT_DOCTOR.md  20_WORKTREES_COMMIT_SEQUENCING.md  21_CASE_BUNDLES.md  90_RELEASE.md  92_CONTRACT_CLAIMS_INVENTORY.md  93_CONTRACT_AUDIT_REPORT.md  94_CONTRACT_REMEDIATION_BACKLOG.md  CASE_BUNDLES.md  INSTALL.md  KERNEL_PRINCIPLES.md  PROJECT_DOCTOR.md  PR_FLOW.md  REFUSAL_PHILOSOPHY.md  RELEASE.md  ROUTER.md  TASK_PACKET_FORMAT.md  TP_GIT_WORKFLOW.md  WORKTREES_COMMIT_SEQUENCING.md
docs/llm/: TASKX_OPERATOR_SYSTEM.md
ops/: OUT_OPERATOR_SYSTEM_PROMPT.md  operator_profile.yaml
ops/templates/: base_supervisor.md  lab_boundary.md
ops/templates/overlays/: chatgpt.md
schemas/: commit_run_report.schema.json  implementer_report.schema.json  supervisor_review.schema.json
scripts/: check_build_determinism.sh  install.sh  install_taskx.sh  startup_jules.sh  taskx_build.sh  taskx_install_test.sh  taskx_release_local.sh  taskx_verify_clean_venv.sh
src/taskx/: __init__.py  ci_gate.py  cli.py  doctor.py  neon_persist.py  ui.py
src/taskx/artifacts/: canonical_json.py  writer.py
src/taskx/assets/templates/: shell_envrc.template  shell_taskx_local.template  shell_taskx_shim.template
src/taskx/docs/: refresh_llm.py
src/taskx/git/: __init__.py  branch_guard.py  commit_run.py  commit_sequence.py  finish.py  worktree.py
src/taskx/obs/: run_artifacts.py
src/taskx/ops/: __init__.py  blocks.py  cli.py  compile.py  conflicts.py  discover.py  doctor.py  export.py  manual.py
src/taskx/ops/tp_git/: __init__.py  cli.py  exec.py  git_worktree.py  (+3 more)
src/taskx/orchestrator/: kernel.py
src/taskx/pr/: open.py
src/taskx/project/: shell.py  upgrade.py
src/taskx/router/: __init__.py  availability.py  handoff.py  planner.py  reporting.py  scoring.py  types.py
src/taskx/runners/: __init__.py  google_jules.py
src/taskx/schemas/: validator.py
src/taskx/utils/: json_output.py  package_data.py  repo.py  repo_config.py  schema_registry.py
src/taskx_adapters/: __init__.py
taskx_schemas/: case_bundle.schema.json
tests/: conftest.py  test_neon_persist.py  test_upgrade.py
tests/ops/: test_flash_hardening.py  test_gov_hardening.py  test_ops.py
tests/unit/bundle/: test_exporter.py
tests/unit/git/: test_commit_run.py  test_commit_sequence.py  test_finish.py  test_worktree.py
tests/unit/taskx/: route_test_utils.py  test_coverage_sanity.py  test_neon_artifact_invariants.py  test_neon_cli.py  test_neon_persist.py  test_neon_ui.py  test_pr_open_fallback_url.py  test_pr_open_refresh_llm.py  test_pr_open_refusals.py  test_pr_open_restore.py  test_project_shell.py  test_project_upgrade.py  test_repo_guard.py  test_route_plan_refusal_artifacts.py  test_route_router_v1_invariants.py  test_router_handoff.py  test_router_plan_determinism.py  test_router_refusal.py  test_task_packet_commit_plan.py  test_worktree_sequence_dirty_policy_stash.py  test_worship_cli.py
tests/unit/tp_git/: test_guards.py  test_naming.py
tests/unit/utils/: test_schema_loading_new.py
(+19 files in other folders)
