[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskx"
version = "0.1.0"
description = "TaskX - deterministic task-packet lifecycle + gates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Dopemux Contributors"}]
keywords = ["taskx", "task-packet", "lifecycle", "deterministic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.6,<8",
    "ruff>=0.6.9,<1",
    "mypy>=1.0.0",
    "types-jsonschema>=4.0.0",
]

[project.scripts]
taskx = "taskx.cli:cli"

[project.entry-points."taskx.adapters"]
dopemux = "taskx_adapters.dopemux:DopemuxAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/taskx", "src/taskx_adapters", "taskx_schemas"]
include = [
    "src/taskx/assets/templates/*.md",
    "src/taskx/assets/templates/*.yaml",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "taskx_schemas/",
    "tests/",
    "scripts/",
    "pyproject.toml",
    "README_TASKX_INSTALL.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
force-exclude = true
exclude = [
    ".venv",
    ".claude",
    "node_modules",
    "site",
    "htmlcov",
    "context_portal",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101", "PLR2004"]
".claude/hooks/**/*.py" = ["ALL"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "perf: performance smoke tests (opt-in)",
]
addopts = [
    "-q",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=1",
    "--cov=taskx",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=1",
]

[tool.coverage.run]
branch = true
source = ["taskx"]
parallel = false
omit = [
  "tests/*",
  "*/taskx/__main__.py",
]

[tool.coverage.report]
skip_empty = false
show_missing = true
fail_under = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
